# khm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yml  shell.nix
.github/workflows/: main.yml  ui-build-check.yml
khm-wasm/: Cargo.toml
khm-wasm/src/: lib.rs
src/: client.rs  db.rs  lib.rs  main.rs  server.rs  wasm_lib.rs  web.rs  web_gui.rs
src/gui/: icons.rs.bak  mod.rs
src/gui/admin/: mod.rs  state.rs  ui.rs
src/gui/api/: client.rs  mod.rs
src/gui/common/: mod.rs  settings.rs
src/gui/settings/: connection.rs  cross.rs  macos.rs  macos.rs.bak  mod.rs  ui.rs  window.rs
src/gui/tray/: app.rs  icon.rs  mod.rs
src/web_gui/: api.rs  app.rs  state.rs  ui.rs  wasm.rs  wasm_api.rs
static/: index.html  script.js  style.css
