[package]
name = "khm"
version = "0.6.3"
edition = "2021"
authors = ["AB <ab@hexor.cy>"]

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
regex = "1.10.5"
base64 = "0.21"
tokio = { version = "1", features = ["full", "sync"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["json"] }
trust-dns-resolver = "0.23"
futures = "0.3"
hostname = "0.3"
rust-embed = "8.0"
tray-icon = "0.19"
notify = "6.1"
notify-debouncer-mini = "0.4"
dirs = "5.0"
eframe = "0.29"
egui = "0.29"
winit = "0.30"
env_logger = "0.11"
urlencoding = "2.1"

